// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diffSchema (MySQL) > detects unique constraint column composition changes 1`] = `
{
  "operations": [
    {
      "constraintName": "uq_email",
      "sql": "ALTER TABLE \`users\` DROP INDEX \`uq_email\`;",
      "tableName": "users",
      "type": "drop_constraint",
    },
    {
      "constraintName": "uq_email",
      "sql": "ALTER TABLE \`users\` ADD UNIQUE KEY \`uq_email\` (\`email\`, \`tenant_id\`);",
      "tableName": "users",
      "type": "add_unique",
    },
  ],
}
`;

exports[`diffSchema (MySQL) > generates add_column for a new column on an existing table 1`] = `
{
  "operations": [
    {
      "sql": "ALTER TABLE \`users\` ADD COLUMN \`email\` VARCHAR(320);",
      "tableName": "users",
      "type": "add_column",
    },
  ],
}
`;

exports[`diffSchema (MySQL) > generates add_fk and drop_fk for FK changes 1`] = `
{
  "operations": [
    {
      "constraintName": "fk_old",
      "sql": "ALTER TABLE \`posts\` DROP FOREIGN KEY \`fk_old\`;",
      "tableName": "posts",
      "type": "drop_fk",
    },
    {
      "constraintName": "fk_new",
      "sql": "ALTER TABLE \`posts\` ADD CONSTRAINT \`fk_new\` FOREIGN KEY (\`author_id\`) REFERENCES \`users\` (\`id\`) ON DELETE CASCADE ON UPDATE CASCADE;",
      "tableName": "posts",
      "type": "add_fk",
    },
  ],
}
`;

exports[`diffSchema (MySQL) > generates add_index and drop_index for index changes 1`] = `
{
  "operations": [
    {
      "indexName": "idx_old",
      "sql": "ALTER TABLE \`users\` DROP INDEX \`idx_old\`;",
      "tableName": "users",
      "type": "drop_index",
    },
    {
      "indexName": "idx_new",
      "sql": "CREATE INDEX \`idx_new\` ON \`users\` (\`name\` ASC);",
      "tableName": "users",
      "type": "add_index",
    },
  ],
}
`;

exports[`diffSchema (MySQL) > generates add_unique for new unique constraints 1`] = `
{
  "operations": [
    {
      "constraintName": "uq_email",
      "sql": "ALTER TABLE \`users\` ADD UNIQUE KEY \`uq_email\` (\`email\`);",
      "tableName": "users",
      "type": "add_unique",
    },
  ],
}
`;

exports[`diffSchema (MySQL) > generates create_table for a new table 1`] = `
{
  "operations": [
    {
      "foreignTableDeps": [],
      "sql": "CREATE TABLE IF NOT EXISTS \`users\` (
  \`id\` CHAR(36) NOT NULL,
  \`name\` VARCHAR(255) NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
      "tableName": "users",
      "type": "create_table",
    },
  ],
}
`;

exports[`diffSchema (MySQL) > generates drop_column for removed columns 1`] = `
{
  "operations": [
    {
      "columnName": "legacy_field",
      "sql": "ALTER TABLE \`users\` DROP COLUMN \`legacy_field\`;",
      "tableName": "users",
      "type": "drop_column",
    },
  ],
}
`;

exports[`diffSchema (MySQL) > generates drop_constraint for removed check constraints 1`] = `
{
  "operations": [
    {
      "constraintName": "chk_age_max",
      "sql": "ALTER TABLE \`users\` DROP CHECK \`chk_age_max\`;",
      "tableName": "users",
      "type": "drop_constraint",
    },
  ],
}
`;

exports[`diffSchema (MySQL) > generates drop_unique for removed unique constraints 1`] = `
{
  "operations": [
    {
      "constraintName": "uq_old",
      "sql": "ALTER TABLE \`users\` DROP INDEX \`uq_old\`;",
      "tableName": "users",
      "type": "drop_constraint",
    },
  ],
}
`;

exports[`diffSchema (MySQL) > generates modify_column for enum value changes 1`] = `
{
  "operations": [
    {
      "columnName": "status",
      "sql": "ALTER TABLE \`users\` MODIFY COLUMN \`status\` ENUM('active','inactive','suspended') NOT NULL;",
      "tableName": "users",
      "type": "modify_column",
    },
  ],
}
`;

exports[`diffSchema (MySQL) > generates modify_column when column type changes 1`] = `
{
  "operations": [
    {
      "columnName": "score",
      "sql": "ALTER TABLE \`users\` MODIFY COLUMN \`score\` BIGINT NOT NULL;",
      "tableName": "users",
      "type": "modify_column",
    },
  ],
}
`;

exports[`diffSchema (MySQL) detects unique constraint column composition changes 1`] = `
{
  "operations": [
    {
      "constraintName": "uq_email",
      "sql": "ALTER TABLE \`users\` DROP INDEX \`uq_email\`;",
      "tableName": "users",
      "type": "drop_constraint",
    },
    {
      "constraintName": "uq_email",
      "sql": "ALTER TABLE \`users\` ADD UNIQUE KEY \`uq_email\` (\`email\`, \`tenant_id\`);",
      "tableName": "users",
      "type": "add_unique",
    },
  ],
}
`;

exports[`diffSchema (MySQL) generates add_column for a new column on an existing table 1`] = `
{
  "operations": [
    {
      "sql": "ALTER TABLE \`users\` ADD COLUMN \`email\` VARCHAR(320);",
      "tableName": "users",
      "type": "add_column",
    },
  ],
}
`;

exports[`diffSchema (MySQL) generates add_fk and drop_fk for FK changes 1`] = `
{
  "operations": [
    {
      "constraintName": "fk_old",
      "sql": "ALTER TABLE \`posts\` DROP FOREIGN KEY \`fk_old\`;",
      "tableName": "posts",
      "type": "drop_fk",
    },
    {
      "constraintName": "fk_new",
      "sql": "ALTER TABLE \`posts\` ADD CONSTRAINT \`fk_new\` FOREIGN KEY (\`author_id\`) REFERENCES \`users\` (\`id\`) ON DELETE CASCADE ON UPDATE CASCADE;",
      "tableName": "posts",
      "type": "add_fk",
    },
  ],
}
`;

exports[`diffSchema (MySQL) generates add_index and drop_index for index changes 1`] = `
{
  "operations": [
    {
      "indexName": "idx_old",
      "sql": "ALTER TABLE \`users\` DROP INDEX \`idx_old\`;",
      "tableName": "users",
      "type": "drop_index",
    },
    {
      "indexName": "idx_new",
      "sql": "CREATE INDEX \`idx_new\` ON \`users\` (\`name\` ASC);",
      "tableName": "users",
      "type": "add_index",
    },
  ],
}
`;

exports[`diffSchema (MySQL) generates add_unique for new unique constraints 1`] = `
{
  "operations": [
    {
      "constraintName": "uq_email",
      "sql": "ALTER TABLE \`users\` ADD UNIQUE KEY \`uq_email\` (\`email\`);",
      "tableName": "users",
      "type": "add_unique",
    },
  ],
}
`;

exports[`diffSchema (MySQL) generates create_table for a new table 1`] = `
{
  "operations": [
    {
      "foreignTableDeps": [],
      "sql": "CREATE TABLE IF NOT EXISTS \`users\` (
  \`id\` CHAR(36) NOT NULL,
  \`name\` VARCHAR(255) NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
      "tableName": "users",
      "type": "create_table",
    },
  ],
}
`;

exports[`diffSchema (MySQL) generates drop_column for removed columns 1`] = `
{
  "operations": [
    {
      "columnName": "legacy_field",
      "sql": "ALTER TABLE \`users\` DROP COLUMN \`legacy_field\`;",
      "tableName": "users",
      "type": "drop_column",
    },
  ],
}
`;

exports[`diffSchema (MySQL) generates drop_constraint for removed check constraints 1`] = `
{
  "operations": [
    {
      "constraintName": "chk_age_max",
      "sql": "ALTER TABLE \`users\` DROP CHECK \`chk_age_max\`;",
      "tableName": "users",
      "type": "drop_constraint",
    },
  ],
}
`;

exports[`diffSchema (MySQL) generates drop_unique for removed unique constraints 1`] = `
{
  "operations": [
    {
      "constraintName": "uq_old",
      "sql": "ALTER TABLE \`users\` DROP INDEX \`uq_old\`;",
      "tableName": "users",
      "type": "drop_constraint",
    },
  ],
}
`;

exports[`diffSchema (MySQL) generates modify_column for enum value changes 1`] = `
{
  "operations": [
    {
      "columnName": "status",
      "sql": "ALTER TABLE \`users\` MODIFY COLUMN \`status\` ENUM('active','inactive','suspended') NOT NULL;",
      "tableName": "users",
      "type": "modify_column",
    },
  ],
}
`;

exports[`diffSchema (MySQL) generates modify_column when column type changes 1`] = `
{
  "operations": [
    {
      "columnName": "score",
      "sql": "ALTER TABLE \`users\` MODIFY COLUMN \`score\` BIGINT NOT NULL;",
      "tableName": "users",
      "type": "modify_column",
    },
  ],
}
`;
